--- a/architecture.html
+++ b/architecture.html
@@ -25,64 +25,73 @@
           <li class="nav_item"><a href="art.html">Art</a></li>
           <li class="nav_item"><a href="sculpture.html">Sculpture</a></li>
           <li class="nav_item"><a href="architecture.html" class="active">Architecture</a></li>
+          <li class="nav_item"><a href="bibliography.html">Bibliography</a></li>
         </ul>
     </div>
     </nav>
 </header>
 <main id="skip" class="gallery">
-<h1><span class="typewriter">Architecture Gallery Showcase</span></h1>
+<h1><span class="typewriter">Architecture </span></h1>
 <p>Here are my top favorite pieces of architecture from a variety of periods.</p>
 <div class="gallery_grid">
     <div class="gallery_item">
-    <a class="lightboximage" href = "images/Chapelle_architecture.jpg" target="_blank" data-lightbox="architecture" data-title="Sainte-Chapelle (France)" data-alt="Stained glass windows of Sainte-Chapelle fill the Gothic chapel with vibrant, colored light.">
+    <a class="lightboximage" href = "images/Chapelle_architecture.jpg" target="_blank" data-lightbox="architecture" data-title="Sainte-Chapelle (France). Photograph by Mael vreizh courtesy of Wikimedia Commons." data-alt="Stained glass windows of Sainte-Chapelle fill the Gothic chapel with vibrant, colored light.">
         <img src="images/Chapelle_architecture.jpg" width = "200" alt="Stained glass windows of Sainte-Chapelle fill the Gothic chapel with vibrant, colored light.">
+        <!-- image taken from this site: https://commons.wikimedia.org/wiki/File:Sainte_Chapelle_-_Upper_level_1.jpg -->
     </a>
-        <span class="caption">Sainte-Chapelle is a palatine chapel that was built by Louis IX to house the Crown of Thorns. Louis IX was king of France who was considered a saint during his lifetime and was canonized by the Catholic church after his death. I like this chapel due to its usage of stained glass that creates an ephemeral experience.</span>
+        <span class="caption">Sainte-Chapelle is a palatine chapel that was built by Louis IX to house the Crown of Thorns. Louis IX was king of France who was considered a saint during his lifetime and was canonized by the Catholic church after his death (1). I like this chapel due to its usage of stained glass that creates an ephemeral experience.</span>
     </div>
     <div class="gallery_item">
-        <a class="lightboximage" href = "images/Alhambra_architecture.jpg" target="_blank" data-lightbox="architecture" data-title="Alhambra of Granada" data-alt="Panoramic view of the Alhambra’s reddish stone palaces and towers set against forested hills and distant mountains at sunset.">
+        <a class="lightboximage" href = "images/Alhambra_architecture.jpg" target="_blank" data-lightbox="architecture" data-title="Alhambra of Granada. Photograph by Jebulon courtesy of Wikimedia Commons." data-alt="Panoramic view of the Alhambra’s reddish stone palaces and towers set against forested hills and distant mountains at sunset.">
         <img src="images/Alhambra_architecture.jpg" width = "200" alt="Panoramic view of the Alhambra’s reddish stone palaces and towers set against forested hills and distant mountains at sunset.">
+          <!-- image taken from this site: https://commons.wikimedia.org/wiki/File:Alhambra_in_the_evening.jpg -->
     </a>
-        <span class="caption">They are medieval palaces that were built by Nasrid dynasty rulers, who were the last of the Muslims to rule Spain. These palaces are known for their decorative architecture along with its fountains and gardens. I like this architecture because of how decorative its architecture is along its walls and ceilings with the Quranic script that can be breathtaking to see.</span>
+        <span class="caption"> Alhambra of Granada are medieval palaces that were built by Nasrid dynasty rulers, who were the last of the Muslims to rule Spain. These palaces are known for their decorative architecture along with its fountains and gardens (2). I like this architecture because of how decorative its architecture is along its walls and ceilings with the Quranic script that can be breathtaking to see.</span>
     </div>
     <div class="gallery_item">
-        <a class="lightboximage" href = "images/BasilicaVaticano_architecture.jpg" target="_blank" data-lightbox="architecture" data-title="St. Peter’s Basilica (Vatican)" data-alt="Grand façade of St. Peter’s Basilica with towering columns, statues, and a central dome under a clear blue sky.">
+        <a class="lightboximage" href = "images/BasilicaVaticano_architecture.jpg" target="_blank" data-lightbox="architecture" data-title="St. Peter’s Basilica (Vatican). Photograph by Alvesgaspar courtesy of Wikimedia Commons." data-alt="Grand façade of St. Peter’s Basilica with towering columns, statues, and a central dome under a clear blue sky.">
         <img src="images/BasilicaVaticano_architecture.jpg" width = "200" alt="Grand façade of St. Peter’s Basilica with towering columns, statues, and a central dome under a clear blue sky.">
+        <!-- image taken from this site: https://commons.wikimedia.org/wiki/File:Basilica_di_San_Pietro_in_Vaticano_September_2015-1a.jpg-->
     </a>
-        <span class="caption">This basilica is built to house the remains of St. Peter resides below its floor level. This building has a complex history in terms of its construction as it used to be a chariot racing stadium before it was converted into a basilica by Constantine. There were several notable architects who worked on this building such as Michelangelo and Bernini. I like this architecture because its interior is breathtaking with its usage of domes.</span>
+        <span class="caption"> St. Peter’s Basilica is built to house the remains of St. Peter resides below its floor level. This building has a complex history in terms of its construction as it used to be a chariot racing stadium before it was converted into a basilica by Constantine. There were several notable architects who worked on this building such as Michelangelo and Bernini (3).I like this architecture because its interior is breathtaking with its usage of domes.</span>
     </div>
     <div class="gallery_item">
-        <a class="lightboximage" href = "images/AngkorWat_architecture.jpg" target="_blank" data-lightbox="architecture" data-title="Angkor Wat (Cambodia)" data-alt="Angkor Wat temple towers rise behind palm trees, reflected in a still pond under a bright blue sky.">
+        <a class="lightboximage" href = "images/AngkorWat_architecture.jpg" target="_blank" data-lightbox="architecture" data-title="Angkor Wat (Cambodia). Photograph by Satdeep Gill courtesy of Wikimedia Commons." data-alt="Angkor Wat temple towers rise behind palm trees, reflected in a still pond under a bright blue sky.">
         <img src="images/AngkorWat_architecture.jpg" width = "200" alt="Angkor Wat temple towers rise behind palm trees, reflected in a still pond under a bright blue sky.">
+        <!-- image taken from this site: https://commons.wikimedia.org/wiki/File:Angkor_Wat_with_its_reflection_(cropped).jpg-->
     </a>
-        <span class="caption">Angkor Wat is a Hindu temple and is one of the best preserved temples in the world. It is the magnum opus of  Khmer empire that means to duplicate the idea of heavens on earth. I like this temple because it shows the architectural prowess that can be often overlooked by its Western counterparts.</span>
+        <span class="caption">Angkor Wat is a Hindu temple and is one of the best preserved temples in the world. It is the magnum opus of  Khmer empire that means to duplicate the idea of heavens on earth (4). I like this temple because it shows the architectural prowess that can be often overlooked by its Western counterparts.</span>
     </div>
         <div class="gallery_item">
-        <a class="lightboximage" href = "images/Fallingwater_architecture.jpg" target="_blank" data-lightbox="architecture" data-title="Fallingwater (Mill Run, Pennsylvania, USA) by Frank Lloyd Wright" data-alt="Modern house cantilevered over a waterfall, surrounded by dense forest.">
+        <a class="lightboximage" href = "images/Fallingwater_architecture.jpg" target="_blank" data-lightbox="architecture" data-title="Fallingwater (Mill Run, Pennsylvania, USA) by Frank Lloyd Wright. Photograph by Bill McMannis courtesy of Flickr." data-alt="Modern house cantilevered over a waterfall, surrounded by dense forest.">
         <img src="images/Fallingwater_architecture.jpg" width = "200" alt="Modern house cantilevered over a waterfall, surrounded by dense forest.">
+         <!-- image taken from this site: https://commons.wikimedia.org/wiki/File:Angkor_Wat_with_its_reflection_(cropped).jpg-->
     </a>
-        <span class="caption">Fallingwater is considered Wright’s magnum opus. The client commissioned Wright to build their summer home for a weekend retreat due to their shared love for nature. I like this architecture because of how it is integrated with the waterfall.</span>
+        <span class="caption">Fallingwater by Frank Lloyd Wright is considered Wright’s magnum opus. The client commissioned Wright to build their summer home for a weekend retreat due to their shared love for nature (5). I like this architecture because of how it is integrated with the waterfall.</span>
     </div>
+     <!-- image taken from this site: https://commons.wikimedia.org/wiki/File:Frank_Lloyd_Wright%27s_Fallingwater_-_Flickr_-_BillMcMannis.jpg-->
     <div class="gallery_item">
-        <a class="lightboximage" href = "images/HaedongYonggu_architecture.jpg" target="_blank" data-lightbox="architecture" data-title="Haedong Yonggungsa Temple (해동 용궁사)" data-alt="Haedong Yonggungsa Temple perched on a rocky coastline, with ornate rooftops and forested hills in the background.">
+        <a class="lightboximage" href = "images/HaedongYonggu_architecture.jpg" target="_blank" data-lightbox="architecture" data-title="Haedong Yonggungsa Temple (해동 용궁사). Photograph by Christian Bolz courtesy of Wikimedia Commons." data-alt="Haedong Yonggungsa Temple perched on a rocky coastline, with ornate rooftops and forested hills in the background.">
         <img src="images/HaedongYonggu_architecture.jpg" width = "200" alt="Haedong Yonggungsa Temple perched on a rocky coastline, with ornate rooftops and forested hills in the background.">
+         <!-- image taken from this site: https://commons.wikimedia.org/wiki/File:Haedong_Yonggungsa_Temple_near_Busan.jpg-->
     </a>
-        <span class="caption">Haedong Yonggungsa temple is a Buddhist temple that is located in Busan, South Korea, the southernmost point of Korea. This temple was constructed in the Goryeo dynasty and is known for its unique location of being built along the shore line. I like this temple because of its location and how it connects harmoniously with the sea.</span>
+        <span class="caption">Haedong Yonggungsa temple (해동 용궁사) is a Buddhist temple that is located in Busan, South Korea, the southernmost point of Korea. This temple was constructed in the Goryeo dynasty and is known for its unique location of being built along the shore line (6). I like this temple because of its location and how it connects harmoniously with the sea.</span>
     </div>
     <div class="gallery_item">
-        <a class="lightboximage" href = "images/HagiaSophia_architecture.jpg" target="_blank" data-lightbox="architecture" data-title="Hagia Sophia Grand Mosque" data-alt="Hagia Sophia with its massive central dome and four minarets, set against a clear blue sky in Istanbul.">
+        <a class="lightboximage" href = "images/HagiaSophia_architecture.jpg" target="_blank" data-lightbox="architecture" data-title="Hagia Sophia Grand Mosque. Photograph by Arild Vågen courtesy of Wikimedia Commons." data-alt="Hagia Sophia with its massive central dome and four minarets, set against a clear blue sky in Istanbul.">
         <img src="images/HagiaSophia_architecture.jpg" width = "200" alt="Hagia Sophia with its massive central dome and four minarets, set against a clear blue sky in Istanbul.">
+        <!-- image taken from this site: https://commons.wikimedia.org/wiki/File:Hagia_Sophia_Mars_2013.jpg-->
     </a>
-        <span class="caption">Hagia Sophia Grand is a secular building with a complex history. It was initially built as a cathedral when Istanbul was Constantinople and then converted into a mosque when Constantinople collapsed before finally converting to a museum for secular use. I like this architecture because it showcases how the architecture shifts in relation to he political landscape and preserves them.</span>
+        <span class="caption">Hagia Sophia Grand Mosque is a secular building with a complex history. It was initially built as a cathedral when Istanbul was Constantinople and then converted into a mosque when Constantinople collapsed before finally converting to a museum for secular use (7). I like this architecture because it showcases how the architecture shifts in relation to he political landscape and preserves them.</span>
     </div>
     <div class="gallery_item">
-        <a class="lightboximage" href = "images/Mezquita_architecture.jpg" target="_blank" data-lightbox="architecture" data-title="Mezquita of Córdoba" data-alt="Aerial view of the Mezquita of Córdoba, with its large mosque-cathedral complex, courtyard, and bell tower amid a dense cityscape.">
+        <a class="lightboximage" href = "images/Mezquita_architecture.jpg" target="_blank" data-lightbox="architecture" data-title="Mezquita of Córdoba. Photograph by Toni Castillo Quero courtesy of Flickr. " data-alt="Aerial view of the Mezquita of Córdoba, with its large mosque-cathedral complex, courtyard, and bell tower amid a dense cityscape.">
         <img src="images/Mezquita_architecture.jpg" width = "200" alt="Aerial view of the Mezquita of Córdoba, with its large mosque-cathedral complex, courtyard, and bell tower amid a dense cityscape.">
+        <!-- image taken from this site: https://commons.wikimedia.org/wiki/File:Mezquita_de_C%C3%B3rdoba_desde_el_aire_(C%C3%B3rdoba,_Espa%C3%B1a).jpg-->
     </a>
-        <span class="caption">They are medieval palaces that were built by Nasrid dynasty rulers, who were the last of the Muslims to rule Spain. These palaces are known for their decorative architecture along with its fountains and gardens. I like this architecture because of how decorative its architecture is along its walls and ceilings with the Quranic script that can be breathtaking to see.</span>
+        <span class="caption">Mezquita of Córdoba, Mezquita-Cathedral, is one of the oldest structures that Muslims have built that is still standing in Spain. This building has a complex history as a religious site. It is thought to have been a temple to Janus in the Roman era, which was then converted to church and then converted to mosque before being converted back to church again (8). I like this architecture because it shows how the religious sites from different religions come together.</span>
     </div>
     </div>
-        <script src="dist/js/lightbox-plus-jquery.js"></script>
 </main>
 <footer class="site_footer">
     <div class="footer_container">
