--- a/home.html
+++ b/home.html
@@ -23,16 +23,19 @@
         <li class="nav_item"><a href="art.html">Art</a></li>
         <li class="nav_item"><a href="sculpture.html">Sculpture</a></li>
         <li class="nav_item"><a href="architecture.html">Architecture</a></li>
+        <li class="nav_item"><a href="bibliography.html">Bibliography</a></li>
       </ul>
     </div>
   </nav>
 </header>
 <main class="intro-gallery" id="skip">
-<h1><span class="typewriter">Welcome to Lines of Thought!</span></h1>
+<h1><span class="typewriter"> Curated Lines </span></h1>
+<div class="intro">
 <p>Welcome to <em>Lines of Thought</em>—a personal archive of artworks, architecture, and sculpture that have lingered with me across time, style, and place.</p>
 <p>Each piece in this gallery is more than a masterpiece. It’s a moment that speaks—a line of thought made visible. I’ve gathered these works not only for their beauty, but for the quiet impact they’ve left on how I see, feel, and remember.</p>
 <p>Alongside each, you’ll find my reflections—thoughts that trace the emotional and historical contours of form, light, and meaning.</p>
 <p>Thank you for stepping into this conversation across centuries.</p>
+</div>
 </main>
 <main class=intro-gallery>
 <section class="collection-preview">
