--- a/sculpture.html
+++ b/sculpture.html
@@ -25,61 +25,70 @@
           <li class="nav_item"><a href="art.html">Art</a></li>
           <li class="nav_item"><a href="sculpture.html" class="active">Sculpture</a></li>
           <li class="nav_item"><a href="architecture.html">Architecture</a></li>
+          <li class="nav_item"><a href="bibliography.html">Bibliography</a></li>
         </ul>
     </div>
     </nav>
 </header>
 <main id="skip" class="gallery">
-<h1><span class="typewriter">Sculpture Gallery Showcase</span></h1>
+<h1><span class="typewriter">Sculpture</span></h1>
 <p>Here are my top favorite pieces of sculptures from a variety of periods.</p>
 <div class="gallery_grid">
     <div class="gallery_item">
-<a class="lightboximage" href = "images/Continuity_sculpture.jpg" target="_blank" data-lightbox="sculpture" data-title="Unique Forms of Continuity in Space by Umberto Boccioni" data-alt="Abstract bronze figure striding forward, with flowing, aerodynamic forms suggesting motion.">
+<a class="lightboximage" href = "images/Continuity_sculpture.jpg" target="_blank" data-lightbox="sculpture" data-title="Unique Forms of Continuity in Space by Umberto Boccioni (circa 1913). Public Domain. Image courtesy of Museum of Modern Art and Metropolian Museum of Art." data-alt="Abstract bronze figure striding forward, with flowing, aerodynamic forms suggesting motion.">
     <img src="images/Continuity_sculpture.jpg" width = "200" alt="Abstract bronze figure striding forward, with flowing, aerodynamic forms suggesting motion.">
+     <!-- image taken from this site: https://commons.wikimedia.org/wiki/File:Unique_Forms_of_Continuity_in_Space_MET_DT6411.jpg-->
 </a>
-    <span class="caption">This metal sculpture depicts a marching figure that is forging ahead. This figure is symbolic of the Futurist movement showing the dynamic speed of the machine age. I like this sculpture because it depicts the fast paced culture that defines our modern era while taking allusions from classical Greek or Roman sculpture. </span>
+    <span class="caption">Unique Forms of Continuity in Space by Umberto Boccioni is metal sculpture depicting a marching figure that is forging ahead. This figure is symbolic of the Futurist movement showing the dynamic speed of the machine age (1). I like this sculpture because it depicts the fast paced culture that defines our modern era while taking allusions from classical Greek or Roman sculpture. </span>
 </div>
 <div class="gallery_item">
-<a class="lightboximage" href = "images/Pieta_sculpture.jpg" target="_blank" data-lightbox="sculpture" data-title="La Pietà di Michelangelo by Michelangelo" data-alt="Marble sculpture of Mary cradling the lifeless body of Jesus with serene sorrow.">
+<a class="lightboximage" href = "images/Pieta_sculpture.jpg" target="_blank" data-lightbox="sculpture" data-title="La Pietà di Michelangelo by Michelangelo (circa 1499). Public Domain. St Peter's Basilica." data-alt="Marble sculpture of Mary cradling the lifeless body of Jesus with serene sorrow.">
     <img src="images/Pieta_sculpture.jpg" width = "200" alt="Marble sculpture of Mary cradling the lifeless body of Jesus with serene sorrow.">
+    <!-- image taken from this site: https://commons.wikimedia.org/wiki/File:Michelangelo%27s_Pieta_5450_cropncleaned_edit.jpg-->
 </a>
-    <span class="caption">This sculpture depicts Virgin Mary holding the dead body of Jesus after his crucifixion from the cross. This sculpture was commissioned to go on the old side of St Peter’s Basilica but now resides in New St. Peter’s Basilica in Rome. I like this sculpture because of how detailed the sculpture is in relation to clothing and human skin.</span>
+    <span class="caption">La Pietà di Michelangelo by Michelangelo depicts Virgin Mary holding the dead body of Jesus after his crucifixion from the cross. This sculpture was commissioned to go on the old side of St Peter’s Basilica but now resides in New St. Peter’s Basilica in Rome (2).I like this sculpture because of how detailed the sculpture is in relation to clothing and human skin.</span>
 </div>
 <div class="gallery_item">
-    <a class="lightboximage" href = "images/Apollo_sculpture.jpg" target="_blank" data-lightbox="sculpture" data-title="Apollo and Daphne by Gian Lorenzo Bernini" data-alt="Marble sculpture of Apollo reaching for Daphne as she transforms into a tree.">
+    <a class="lightboximage" href = "images/Apollo_sculpture.jpg" target="_blank" data-lightbox="sculpture" data-title="Apollo and Daphne by Gian Lorenzo Bernini (circa 1499).Public Domain. Image courtesy of Galleria Borghese." data-alt="Marble sculpture of Apollo reaching for Daphne as she transforms into a tree.">
     <img src="images/Apollo_sculpture.jpg" width = "200" alt="Marble sculpture of Apollo reaching for Daphne as she transforms into a tree.">
+    <!-- image taken from this site: https://commons.wikimedia.org/wiki/File:Apollo_%26_Daphne_September_2a.jpg-->
 </a>
-    <span class="caption">This sculpture depicts Apollo's pursuit of Daphne when struck by Cupid’s arrow, and Daphne makes a prayer to change her body to a tree due to this chase. This sculpture resides in the Borghese gallery in Rome. I like this sculpture because it shows the transformation from skin to wood.</span>
+    <span class="caption">Apollo and Daphne by Gian Lorenzo Bernini depicts Apollo's pursuit of Daphne when struck by Cupid’s arrow, and Daphne makes a prayer to change her body to a tree due to this chase. This sculpture resides in the Borghese gallery in Rome (3). I like this sculpture because it shows the transformation from skin to wood.</span>
 </div>
 <div class="gallery_item">
-<a class="lightboximage" href = "images/BirdinSpace_sculpture.jpg" target="_blank" data-lightbox="sculpture" data-title="Bird in Space by Constantin Brâncuși" data-alt="Sleek, elongated bronze sculpture suggesting a bird in flight.">
+<a class="lightboximage" href = "images/BirdinSpace_sculpture.jpg" target="_blank" data-lightbox="sculpture" data-title="Bird in Space by Constantin Brâncuși. Photograph by Photograph by Art Poskanzer courtesy of Flickr." data-alt="Sleek, elongated bronze sculpture suggesting a bird in flight.">
     <img src="images/BirdinSpace_sculpture.jpg" width = "200" alt="Sleek, elongated bronze sculpture suggesting a bird in flight.">
+ <!-- image taken from this site: https://commons.wikimedia.org/wiki/File:Bird_in_Space.jpg-->
 </a>
-    <span class="caption">This sculpture depicts the movement of the bird in flight without any of its physical attributes. This sculpture is part of a series. I like this sculpture because of its simplicity of depicting movement in an abstract way.</span>
+    <span class="caption">Bird in Space by Constantin Brâncuși depicts the movement of the bird in flight without any of its physical attributes. This sculpture is part of a series (4). I like this sculpture because of its simplicity of depicting movement in an abstract way.</span>
 </div>
 <div class="gallery_item">
-    <a class="lightboximage" href = "images/TeresaBernini_sculpture.jpg" target="_blank" data-lightbox="sculpture" data-title="Ecstasy of Saint Teresa by Gian Lorenzo Bernini" data-alt="Marble sculpture of Saint Teresa in ecstatic trance as an angel points a spear toward her heart.">
+    <a class="lightboximage" href = "images/TeresaBernini_sculpture.jpg" target="_blank" data-lightbox="sculpture" data-title="Ecstasy of Saint Teresa by Gian Lorenzo Bernini. Photograph by Benjamín Núñez González courtesy of Wikimedia Commons." data-alt="Marble sculpture of Saint Teresa in ecstatic trance as an angel points a spear toward her heart.">
     <img src="images/TeresaBernini_sculpture.jpg" width = "200" alt="Marble sculpture of Saint Teresa in ecstatic trance as an angel points a spear toward her heart.">
+<!-- image taken from this site: https://commons.wikimedia.org/wiki/File:%C3%89xtasis_de_Santa_Teresa,_Gian_Lorenzo_Bernini,_Roma,_Italia,_2019_07.jpg-->
 </a>
-    <span class="caption">The sculpture depicts an episode where the saint describes the ecstasy of the pain experienced by an angel repeatedly piercing her heart multiple times. This sculpture resides in Cornaro Chapel in Rome, Italy. I like this sculpture because it gives an epithermal quality while adhering to the church’s architecture.</span>
+    <span class="caption"> Ecstasy of Saint Teresa by Gian Lorenzo Bernini depicts an episode where the saint describes the ecstasy of the pain experienced by an angel repeatedly piercing her heart multiple times. This sculpture resides in Cornaro Chapel in Rome, Italy (5). I like this sculpture because it gives an epithermal quality while adhering to the church’s architecture.</span>
 </div>
 <div class="gallery_item">
-    <a class="lightboximage" href = "images/GatesofHell_sculpture.jpg" target="_blank" data-lightbox="sculpture" data-title="The Gates of Hell by Auguste Rodin" data-alt="Bronze doors covered in swirling, dramatic figures depicting scenes from Dante’s Inferno.">
+    <a class="lightboximage" href = "images/GatesofHell_sculpture.jpg" target="_blank" data-lightbox="sculpture" data-title="The Gates of Hell by Auguste Rodin. Photograph by David Broad courtesy of Panoramio." data-alt="Bronze doors covered in swirling, dramatic figures depicting scenes from Dante’s Inferno.">
     <img src="images/GatesofHell_sculpture.jpg" width = "200" alt="Bronze doors covered in swirling, dramatic figures depicting scenes from Dante’s Inferno.">
+<!-- image taken from this site: https://commons.wikimedia.org/wiki/File:Gates_of_Hell_by_Auguste_Rodin,_Rodin_Gardens,_Paris_-_panoramio.jpg-->
 </a>
-    <span class="caption">This sculpture depicts the agony and suffering that is universally experienced by humans. Rodin was initially inspired by Dante’s Inferno when creating this work. I like this sculpture because it is characterized by chaotic representations of figures yet adheres to the structured order of the doors.</span>
+    <span class="caption"> The Gates of Hell by Auguste Rodin depicts the agony and suffering that is universally experienced by humans. Rodin was initially inspired by Dante’s Inferno when creating this work (6). I like this sculpture because it is characterized by chaotic representations of figures yet adheres to the structured order of the doors.</span>
 </div>
 <div class="gallery_item">
-<a class="lightboximage" href = "images/Laocoon_sculpture.jpg" target="_blank" data-lightbox="sculpture" data-title="Laocoön and His Sons" data-alt="Marble sculpture of Laocoön and his sons struggling against coiled sea serpents.">
+<a class="lightboximage" href = "images/Laocoon_sculpture.jpg" target="_blank" data-lightbox="sculpture" data-title="Laocoön and His Sons. Photograph by Livioandronico2013. Image courtesy of Vatican Museums and Wikimedia Commons ." data-alt="Marble sculpture of Laocoön and his sons struggling against coiled sea serpents.">
     <img src="images/Laocoon_sculpture.jpg" width = "200" alt="Marble sculpture of Laocoön and his sons struggling against coiled sea serpents.">
+<!-- image taken from this site: https://commons.wikimedia.org/wiki/File:Laocoon_and_His_Sons.jpg-->
 </a>
-    <span class="caption">This sculpture depicts Lacoon, the priest of Apollo, warning of taking the wooden horse into Troy, and Athena and Poseidon releasing serpents killing the priest and his sons in response. This sculpture is important because due to Lacoon’s warning, Aeneas was able to flee Troy and found Rome. I like this sculpture because it shows the twisting of figures in agony against the serpents.</span>
+    <span class="caption"> Laocoön and His Sons depicts Lacoon, the priest of Apollo, warning of taking the wooden horse into Troy, and Athena and Poseidon releasing serpents killing the priest and his sons in response. This sculpture is important because due to Lacoon’s warning, Aeneas was able to flee Troy and found Rome (7). I like this sculpture because it shows the twisting of figures in agony against the serpents.</span>
 </div>
 <div class="gallery_item">
-<a class="lightboximage" href = "images/Veiledvirgin_sculpture.jpg" target="_blank" data-lightbox="sculpture" data-title="The Veiled Virgin by Giovanni Strazza" data-alt="Marble bust of the Virgin Mary with a delicate veil carved to appear translucent.">
+<a class="lightboximage" href = "images/Veiledvirgin_sculpture.jpg" target="_blank" data-lightbox="sculpture" data-title="The Veiled Virgin by Giovanni Strazza. Photograph by Shhewitt courtesy of Wikimedia Commons." data-alt="Marble bust of the Virgin Mary with a delicate veil carved to appear translucent.">
     <img src="images/Veiledvirgin_sculpture.jpg" width = "200" alt="Marble bust of the Virgin Mary with a delicate veil carved to appear translucent.">
+<!-- image taken from this site: https://commons.wikimedia.org/wiki/File:Veiled_virgin.jpg-->
 </a>
-    <span class="caption">This sculpture depicts a veiled Virgin Mary with her eyes closed and her head tilted downward. This sculpture was an important national symbol to the Italian people as it symbolized Italy as a unified country. I like this sculpture because it shows the artist’s prowess to manipulate marble with how its drapery envelops Virgin Mary.</span>
+    <span class="caption"> The Veiled Virgin by Giovanni Strazza depicts a veiled Virgin Mary with her eyes closed and her head tilted downward. This sculpture was an important national symbol to the Italian people as it symbolized Italy as a unified country (8). I like this sculpture because it shows the artist’s prowess to manipulate marble with how its drapery envelops Virgin Mary.</span>
 </div>
 </div>
     <script src="dist/js/lightbox-plus-jquery.js"></script>
